--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Leave application",
+  "name": "Leaveapplication",
   "version": "1.0.0",
   "description": "Leave Application for Employees",
   "main": "index.js",
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
